Fixed the Image in the ReadMe file to display the image

--- a/ReadMe
+++ b/ReadMe
@@ -1,6 +1,6 @@
 ### Task Board
-![alt text](assets/images/image.png)
 
+![Task Board](./assets/images/image.png)
 This is a simple Kanban board for Task Management.
 
 #### Description
