--- a/ReadMe
+++ b/ReadMe
@@ -1,6 +1,7 @@
 ### Task Board
 
 ![Task Board](./assets/images/image.png)
+(./assets/images/image.png)
 This is a simple Kanban board for Task Management.
 
 #### Description
